--- a/plop/plop-templates/Module/style.use.less
+++ b/plop/plop-templates/Module/style.use.less
@@ -1,4 +1,4 @@
-@import (reference) '~common/style/common.less';
+@import (reference) 'common/style/common.less';
 
 /*{{compCSSWrapper}}*//*skip*/.module-wrapper/*skip*/ {
 
