--- a/config/templates/prod-page.html
+++ b/config/templates/prod-page.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="viewport"
           content="initial-scale=0.3333333, maximum-scale=0.3333333, minimum-scale=0.3333333, user-scalable=no">
-    <title>TPU 职称评定</title>
+    <title>webpack-react</title>
     <link rel="icon" type="image/x-icon" href="../extra/favicon.ico">
     <!--IE Polyfill 如果不需要考虑 IE9，请删除-->
     <!--[if lte IE 9]>
